--- a/Memory Game/style.css
+++ b/Memory Game/style.css
@@ -1,5 +1,8 @@
 html {
     font-size: 100%;
+    font-family: 'Fredoka', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Press Start 2P', cursive;
 }
 * {
     box-sizing: border-box;
@@ -12,11 +15,19 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    
     align-items: center;
-    justify-content: center;
+    
+}
+#header {
+    font-size: 2em;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    text-align: center;
 }
 #board {
     background-color: crimson;
+    border: 5px solid white;
     width: auto;
     padding: 2rem;
     display: grid;
@@ -40,6 +51,76 @@ body {
     height: auto;
 }
 #outcome {
-    width: 30vw;
-    padding-left: 2rem;
+    width: 35vw;
+    background-color: aqua;
+    border: 5px solid white;
+    border-top: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+#outcome > p {
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 5px;
+}
+#score {
+    width: 25%;
+    background-color: turquoise;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+}
+#fails {
+    width: 25%;
+    background-color: turquoise;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+}
+#score_text {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+#fails_text {
+    margin-left: 2em;
+    margin-right: 2em;
+}
+#reset_button {
+    margin-top: 5vh;
+    padding: 2em 3em 2em 3em;
+    font-family: 'Fredoka', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Press Start 2P', cursive;
+    border-style: none;
+    background-color: #ffd519
+}
+#reset_button:active {
+    background-color: deeppink;
+}
+/*Do something with this*/
+@media (max-width: 1170px) {
+    #outcome {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    #outcome > p {
+        width: 25%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #score {
+        width: 100%;
+        
+    }
+    #fails {
+        width: 100%;
+    }
 }
